Расчет и сохранение в БД индикаторов на всей истории