@@ -1,16 +1,20 @@
 package com.pinbot.botprime.service;
 
 import com.pinbot.botprime.model.Candle;
-import com.pinbot.botprime.persistence.CandleEntity;
+import com.pinbot.botprime.persistence.IndicatorValueEntity;
 import com.pinbot.botprime.repository.CandleRepository;
+import com.pinbot.botprime.repository.IndicatorValueRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.*;
 import java.util.stream.Collectors;
+
+import static com.pinbot.botprime.service.IndicatorUtils.*;
 
 @Slf4j
 @Service
@@ -18,70 +22,122 @@ import java.util.stream.Collectors;
 public class IndicatorComputeService {
 
     private final CandleRepository candleRepository;
+    private final IndicatorValueRepository indicatorRepo;
 
-    public void computeAndLog(String symbol, String timeframe) {
-        computeAndStore(symbol, timeframe);
-    }
-
-    @Transactional(readOnly = true)
+    @Transactional
     public void computeAndStore(String symbol, String timeframe) {
         log.info("INDICATORS: start compute symbol={} tf={}", symbol, timeframe);
 
-        List<Candle> candles30 = loadCandles(symbol, timeframe);
-        if (candles30.isEmpty()) {
+        List<Candle> candles = loadCandles(symbol, timeframe);
+        if (candles.isEmpty()) {
             log.warn("INDICATORS: no candles found for {} {}", symbol, timeframe);
             return;
         }
 
-        // ==== EMA и TEMA на 30m ====
-        List<Double> closes30 = candles30.stream().map(Candle::getClose).collect(Collectors.toList());
-        List<Double> hl2s = candles30.stream().map(c -> (c.getHigh() + c.getLow()) / 2.0).collect(Collectors.toList());
+        // 1. 30-минутные индикаторы
+        List<Double> closes = candles.stream().map(Candle::getClose).toList();
+        List<Double> hl2    = candles.stream().map(Candle::getHL2).toList();
 
-        List<Double> ema11  = ema(closes30, 11);
-        List<Double> ema30  = ema(closes30, 30);
-        List<Double> ema110 = ema(closes30, 110);
-        List<Double> ema200 = ema(closes30, 200);
-        List<Double> tema9  = sma(tema(hl2s, 9), 10);  // Pine-style
+        List<Double> ema11  = ema(closes, 11);
+        List<Double> ema30  = ema(closes, 30);
+        List<Double> ema110 = ema(closes, 110);
+        List<Double> ema200 = ema(closes, 200);
+        List<Double> tema9  = sma(tema(hl2, 9), 10);
 
-        int last = candles30.size();
-        int fromIdx = Math.max(0, last - 10);
-        System.out.println("\n=== [30m] Последние 10 значений индикаторов ===");
-        for (int i = fromIdx; i < last; i++) {
-            Candle c = candles30.get(i);
-            System.out.printf(
-                    "t=%s | close=%.2f | EMA11=%.6f | EMA30=%.6f | EMA110=%.6f | EMA200=%.6f | TEMA9=%.6f%n",
-                    Instant.ofEpochMilli(c.getTime()),
-                    c.getClose(),
-                    ema11.get(i), ema30.get(i), ema110.get(i), ema200.get(i), tema9.get(i)
-            );
+        // 2. 2-часовые индикаторы
+        List<Candle> candles2h = aggregateTo2h(candles);
+        List<Double> closes2h  = candles2h.stream().map(Candle::getClose).toList();
+        List<Double> rsi2h     = rsi(closes2h, 14);
+        List<Double> smaRsi2h  = sma(rsi2h, 20);
+
+        // 3. Сопоставление 30-м свечей с 2-часовыми
+        Map<Long, Double> rsiMap = new HashMap<>();
+        Map<Long, Double> smaMap = new HashMap<>();
+        for (int i = 0; i < candles2h.size(); i++) {
+            long groupTime = floorTo2h(candles2h.get(i).getTime());
+            rsiMap.put(groupTime, safe(rsi2h.get(i)));
+            smaMap.put(groupTime, safe(smaRsi2h.get(i)));
         }
 
-        // ==== RSI на 2h (из 30m свечей) ====
-        List<Candle> candles2h = aggregateTo2h(candles30);
-        List<Double> closes2h = candles2h.stream().map(Candle::getClose).collect(Collectors.toList());
+        // 4. Сбор IndicatorValueEntity
+        List<IndicatorValueEntity> rows = new ArrayList<>();
+        for (int i = 0; i < candles.size(); i++) {
+            Candle c = candles.get(i);
+            long groupTime = floorTo2h(c.getTime());
+            double rsiVal = rsiMap.getOrDefault(groupTime, -1.0);
+            double smaVal = smaMap.getOrDefault(groupTime, -1.0);
 
-        List<Double> rsi = rsi(closes2h, 14);
-        List<Double> rsiSma = sma(rsi, 20);
-
-        System.out.println("\n=== [2h] Последние 10 значений RSI + SMA ===");
-        int fromRsi = Math.max(0, candles2h.size() - 10);
-        for (int i = fromRsi; i < candles2h.size(); i++) {
-            Candle c = candles2h.get(i);
-            System.out.printf(
-                    "t=%s | close=%.2f | RSI=%.6f | SMA(RSI)=%.6f%n",
-                    Instant.ofEpochMilli(c.getTime()),
-                    c.getClose(),
-                    safe(rsi.get(i)),
-                    safe(rsiSma.get(i))
-            );
+            rows.add(IndicatorValueEntity.builder()
+                    .symbol(symbol)
+                    .timeframe(timeframe)
+                    .open_time(Instant.ofEpochMilli(c.getTime()))
+                    // OHLCV — BigDecimal
+                    .open(BigDecimal.valueOf(c.getOpen()))
+                    .high(BigDecimal.valueOf(c.getHigh()))
+                    .low(BigDecimal.valueOf(c.getLow()))
+                    .close(BigDecimal.valueOf(c.getClose()))
+                    .volume(BigDecimal.valueOf(c.getVolume()))
+                    .quoteVolume(BigDecimal.valueOf(c.getQuoteVolume()))
+                    // Индикаторы — Double
+                    .ema11(safeD(ema11.get(i)))
+                    .ema30(safeD(ema30.get(i)))
+                    .ema110(safeD(ema110.get(i)))
+                    .ema200(safeD(ema200.get(i)))
+                    .tema9(safeD(tema9.get(i)))
+                    .rsi2h(safeD(rsiVal))
+                    .smaRsi2h(safeD(smaVal))
+                    .build());
         }
 
-        log.debug("DONE: indicators computed");
+        // 5. Upsert
+        List<String> symbols      = rows.stream().map(IndicatorValueEntity::getSymbol).toList();
+        List<String> timeframes   = rows.stream().map(IndicatorValueEntity::getTimeframe).toList();
+        List<Instant> openTimes   = rows.stream().map(IndicatorValueEntity::getOpen_time).toList();
+        List<BigDecimal> opens    = rows.stream().map(IndicatorValueEntity::getOpen).toList();
+        List<BigDecimal> highs    = rows.stream().map(IndicatorValueEntity::getHigh).toList();
+        List<BigDecimal> lows     = rows.stream().map(IndicatorValueEntity::getLow).toList();
+        List<BigDecimal> closeValues = rows.stream().map(IndicatorValueEntity::getClose).toList();
+        List<BigDecimal> volumes  = rows.stream().map(IndicatorValueEntity::getVolume).toList();
+        List<BigDecimal> quoteVol = rows.stream().map(IndicatorValueEntity::getQuoteVolume).toList();
+        List<Double> ema11s       = rows.stream().map(IndicatorValueEntity::getEma11).toList();
+        List<Double> ema30s       = rows.stream().map(IndicatorValueEntity::getEma30).toList();
+        List<Double> ema110s      = rows.stream().map(IndicatorValueEntity::getEma110).toList();
+        List<Double> ema200s      = rows.stream().map(IndicatorValueEntity::getEma200).toList();
+        List<Double> tema9s       = rows.stream().map(IndicatorValueEntity::getTema9).toList();
+        List<Double> rsi2hs       = rows.stream().map(IndicatorValueEntity::getRsi2h).toList();
+        List<Double> smaRsi2hs    = rows.stream().map(IndicatorValueEntity::getSmaRsi2h).toList();
+
+        indicatorRepo.upsertBatchArrays(rows);
+
+        log.info("INDICATORS: upserted {} rows for {} {}", rows.size(), symbol, timeframe);
+    }
+
+    private static Double safeD(Double v) {
+        return v == null ? -1d : v;
+    }
+
+
+    // для совместимости
+    public void computeAndLog(String symbol, String timeframe) {
+        computeAndStore(symbol, timeframe);
+    }
+
+    /* ---------- helpers ---------- */
+    private List<Candle> loadCandles(String symbol, String timeframe) {
+        return candleRepository.findAllOrdered(symbol, timeframe).stream()
+                .map(e -> new Candle(
+                        e.getId().getOpenTime().toEpochMilli(),
+                        e.getOpen().doubleValue(),
+                        e.getHigh().doubleValue(),
+                        e.getLow().doubleValue(),
+                        e.getClose().doubleValue(),
+                        e.getVolume().doubleValue(),
+                        e.getQuoteVolume().doubleValue()))
+                .collect(Collectors.toList());
     }
 
     private List<Candle> aggregateTo2h(List<Candle> candles30) {
         Map<Long, List<Candle>> grouped = new TreeMap<>();
-
         for (Candle c : candles30) {
             long groupTime = floorTo2h(c.getTime());
             grouped.computeIfAbsent(groupTime, k -> new ArrayList<>()).add(c);
@@ -90,20 +146,18 @@ public class IndicatorComputeService {
         List<Candle> result = new ArrayList<>();
         for (Map.Entry<Long, List<Candle>> entry : grouped.entrySet()) {
             List<Candle> group = entry.getValue();
-            if (group.size() < 4) continue; // пропускаем неполные свечи
-
+            if (group.size() < 4) continue;
             group.sort(Comparator.comparingLong(Candle::getTime));
 
-            double open = group.get(0).getOpen();
+            double open  = group.get(0).getOpen();
             double close = group.get(group.size() - 1).getClose();
-            double high = group.stream().mapToDouble(Candle::getHigh).max().orElse(0.0);
-            double low = group.stream().mapToDouble(Candle::getLow).min().orElse(0.0);
-            double volume = group.stream().mapToDouble(Candle::getVolume).sum();
+            double high  = group.stream().mapToDouble(Candle::getHigh).max().orElse(0);
+            double low   = group.stream().mapToDouble(Candle::getLow).min().orElse(0);
+            double vol   = group.stream().mapToDouble(Candle::getVolume).sum();
             double quote = group.stream().mapToDouble(Candle::getQuoteVolume).sum();
 
-            result.add(new Candle(entry.getKey(), open, high, low, close, volume, quote));
+            result.add(new Candle(entry.getKey(), open, high, low, close, vol, quote));
         }
-
         return result;
     }
 
@@ -111,149 +165,7 @@ public class IndicatorComputeService {
         return timestamp - (timestamp % (2 * 60 * 60 * 1000L));
     }
 
-    public List<Candle> loadCandles(String symbol, String timeframe) {
-        List<CandleEntity> rows = candleRepository.findAllOrdered(symbol, timeframe);
-        return rows.stream()
-                .map(e -> new Candle(
-                        e.getId().getOpenTime().toEpochMilli(),
-                        toDouble(e.getOpen()),
-                        toDouble(e.getHigh()),
-                        toDouble(e.getLow()),
-                        toDouble(e.getClose()),
-                        toDouble(e.getVolume()),
-                        toDouble(e.getQuoteVolume())
-                ))
-                .collect(Collectors.toList());
-    }
-
-    public static List<Double> ema(List<Double> series, int period) {
-        int n = series.size();
-        List<Double> out = new ArrayList<>(n);
-        if (period <= 1 || n == 0) {
-            for (Double v : series) out.add(v);
-            return out;
-        }
-
-        for (int i = 0; i < period - 1 && i < n; i++) out.add(null);
-
-        double alpha = 2.0 / (period + 1.0);
-
-        if (n >= period) {
-            double sma = 0.0;
-            for (int i = 0; i < period; i++) sma += series.get(i);
-            sma /= period;
-            double prev = sma;
-            out.add(prev);
-
-            for (int i = period; i < n; i++) {
-                double curr = alpha * series.get(i) + (1.0 - alpha) * prev;
-                out.add(curr);
-                prev = curr;
-            }
-        }
-
-        return out;
-    }
-
-    public static List<Double> sma(List<Double> series, int period) {
-        List<Double> out = new ArrayList<>(series.size());
-        double sum = 0.0;
-
-        for (int i = 0; i < series.size(); i++) {
-            Double v = series.get(i);
-            if (v == null) {
-                out.add(null);
-                continue;
-            }
-
-            sum += v;
-            if (i >= period) {
-                Double old = series.get(i - period);
-                sum -= (old == null ? 0.0 : old);
-            }
-
-            if (i >= period - 1) {
-                out.add(sum / period);
-            } else {
-                out.add(null);
-            }
-        }
-
-        return out;
-    }
-
-    public static List<Double> tema(List<Double> series, int period) {
-        List<Double> ema1 = ema(series, period);
-        List<Double> ema2 = ema(replaceNullsWithZeros(ema1), period);
-        List<Double> ema3 = ema(replaceNullsWithZeros(ema2), period);
-
-        List<Double> out = new ArrayList<>(series.size());
-        for (int i = 0; i < series.size(); i++) {
-            Double e1 = ema1.get(i), e2 = ema2.get(i), e3 = ema3.get(i);
-            if (e1 == null || e2 == null || e3 == null) {
-                out.add(null);
-            } else {
-                out.add(3 * e1 - 3 * e2 + e3);
-            }
-        }
-        return out;
-    }
-
-    public static List<Double> rsi(List<Double> series, int period) {
-        List<Double> out = new ArrayList<>();
-        Double prevClose = null;
-        double avgGain = 0.0, avgLoss = 0.0;
-
-        for (int i = 0; i < series.size(); i++) {
-            Double close = series.get(i);
-            if (close == null) {
-                out.add(null);
-                continue;
-            }
-
-            if (prevClose == null) {
-                prevClose = close;
-                out.add(null);
-                continue;
-            }
-
-            double change = close - prevClose;
-            double gain = Math.max(0, change);
-            double loss = Math.max(0, -change);
-
-            if (i <= period) {
-                avgGain += gain;
-                avgLoss += loss;
-                out.add(null);
-            } else if (i == period + 1) {
-                avgGain /= period;
-                avgLoss /= period;
-                double rs = avgLoss == 0 ? 100 : avgGain / avgLoss;
-                out.add(100 - (100 / (1 + rs)));
-            } else {
-                avgGain = (avgGain * (period - 1) + gain) / period;
-                avgLoss = (avgLoss * (period - 1) + loss) / period;
-                double rs = avgLoss == 0 ? 100 : avgGain / avgLoss;
-                out.add(100 - (100 / (1 + rs)));
-            }
-
-            prevClose = close;
-        }
-
-        return out;
-    }
-
-    private static List<Double> replaceNullsWithZeros(List<Double> in) {
-        List<Double> out = new ArrayList<>(in.size());
-        for (Double v : in) out.add(v == null ? 0.0 : v);
-        return out;
-    }
-
-    private static double toDouble(Number n) {
-        return n == null ? 0.0 : n.doubleValue();
-    }
-
     private static double safe(Double v) {
-        return v == null ? 0.0 : v;
+        return v == null ? -1 : v;
     }
 }
